--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "test": "jest --verbose",
+    "test:coverage": "jest --verbose --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
